# effective-tribble

./: .gitignore  Cargo.toml  LICENSE  README.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/entities/: mod.rs  note.rs  prelude.rs
