[package]
name = "effective-tribble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.21"
dotenvy = "0.15.7"
futures = "0.3.28"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros"] }
time = "0.3.25"
